--- a/client/src/index.css
+++ b/client/src/index.css
@@ -134,19 +134,18 @@ border-color: var(--kawaii-panel-border);
 box-shadow: 2px 2px 0px var(--kawaii-shadow-light);
 }
 
-/* client/src/WorldScreen.css */
+/*animacion */
 
 .intro-circle {
     position: absolute;
-    width: 100vmax; /* Suficientemente grande para cubrir la pantalla */
-    height: 100vmax; /* Suficientemente grande para cubrir la pantalla */
+    width: 100vmax;
+    height: 100vmax; 
     border-radius: 50%;
-    transform: scale(0); /* Empieza muy pequeño (cerrado) */
-    opacity: 0; /* Aseguramos que no se vea hasta que empiece */
-    transition: transform 1.5s ease-out, opacity 0.5s ease-in; /* Transiciones suaves */
+    transform: scale(0);
+    opacity: 0; 
+    transition: transform 1.5s ease-out, opacity 0.5s ease-in; 
 }
 
-/* Animación de apertura: el círculo se expande y se hace invisible */
 .intro-circle.animate-open {
     animation: circleOpen 1.5s forwards;
 }
@@ -154,28 +153,26 @@ box-shadow: 2px 2px 0px var(--kawaii-shadow-light);
 @keyframes circleOpen {
     0% {
         transform: scale(0);
-        opacity: 1; /* Aparece al inicio */
+        opacity: 1; 
     }
     100% {
-        transform: scale(2); /* Expande para cubrir la pantalla */
+        transform: scale(2); 
         opacity: 1;
     }
 }
 
-/* Animación de cierre: el círculo se encoge hasta desaparecer */
 .intro-circle.animate-close {
     animation: circleClose 1.5s forwards;
-    /* Sobreescribimos el color de fondo para la animación de cierre */
-    background-color: black !important; /* El color que quieres que tape la pantalla */
+    background-color: black !important; 
 }
 
 @keyframes circleClose {
     0% {
-        transform: scale(2); /* Empieza grande (cubre la pantalla) */
+        transform: scale(2); 
         opacity: 1;
     }
     100% {
-        transform: scale(0); /* Se encoge y desaparece */
+        transform: scale(0); 
         opacity: 1;
     }
 }
